@@ -4,7 +4,7 @@ library(anytime)
 
 anytime(c("2016-09-01 10:11:12", "2016-09-01 10:11:12.345678"))
 anytime(c("2016/09/01 10:11:12", "2016/09/01 10:11:12.345678"))
-anytime(c("20160901 101112",     "20160901 101112.345678"))     
+anytime(c("20160901 101112",     "20160901 101112.345678"))
 anytime(c("20160901 10:11:12",   "20160901 10:11:12.345678"))
 anytime(c("09/01/2016 10:11:12", "09/01/2016 10:11:12.345678"))
 anytime(c("09-01-2016 10:11:12", "09-01-2016 10:11:12.345678"))
@@ -13,7 +13,7 @@ anytime(c("09-01-2016 10:11:12", "09-01-2016 10:11:12.345678"))
 cat("\n")
 anytime(c("2016-Sep-01 10:11:12", "2016-Sep-01 10:11:12.345678"))
 anytime(c("2016/Sep/01 10:11:12", "2016/Sep/01 10:11:12.345678"))
-anytime(c("2016Sep01 101112",     "2016Sep01 101112.345678"))   
+anytime(c("2016Sep01 101112",     "2016Sep01 101112.345678"))
 anytime(c("2016Sep01 10:11:12",   "2016Sep01 10:11:12.345678"))
 anytime(c("Sep/01/2016 10:11:12", "Sep/01/2016 10:11:12.345678"))
 anytime(c("Sep-01-2016 10:11:12", "Sep-01-2016 10:11:12.345678"))
@@ -47,4 +47,5 @@ anytime(c("01SEP2016", "01-Sep-2016"))
 cat("\n")
 anytime(c("2016-September-01", "2016September01", "September/01/2016", "September-01-2016"))
 
-
+cat("\n")
+anytime(c(NA, NaN, Inf, as.numeric(as.POSIXct("2016-09-01 10:11:12"))))
